[package]
name = "sawtooth-rest-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.41"
futures-util = { version="0.3.15", default-features=false }
protobuf = "2.24.1"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
structopt = "0.3.22"
url = "2.2.2"
zmq = "0.9.2"

[build-dependencies]
protoc-rust = "2.0"
glob = "0.3"

[features]
default = ["vendored"]
vendored = ["zmq/vendored"]
